--- a/styles/stylesheets/main/main.css
+++ b/styles/stylesheets/main/main.css
@@ -28,3 +28,14 @@ img {
     display: block;
 }
 
+.billetes{
+   
+width: 200px;
+height: 50px;
+}
+
+.monedas{
+    
+width: 50px;
+height: 50px;
+}
