CRUD Basico, corregidos errores menores

--- a/styles/stylesheets/main.css
+++ b/styles/stylesheets/main.css
@@ -1,5 +1,5 @@
 * {
-    border: solid 1px red;
+    /* border: solid 1px red; */
 }
 
 button {
@@ -44,3 +44,13 @@ height: 50px;
     display: none;
 }
 
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+ }
