--- a/styles/stylesheets/login.css
+++ b/styles/stylesheets/login.css
@@ -3,3 +3,13 @@
     background-color: white;
     padding-bottom: 2%;
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+ }
