--- a/styles/stylesheets/dashboard.css
+++ b/styles/stylesheets/dashboard.css
@@ -73,7 +73,11 @@ nav{
     background-color: #EBBE17 !important;
     color: black !important;
     }
-
+    .btn-contacto:hover{
+        background-color: #EBBE17 !important;
+        color: black !important;
+        border: solid 2px #005F9F !important;
+    }
 
 .btn-categoriasTablas{
     background-color: #EB5717 !important;
@@ -102,6 +106,25 @@ nav{
     border: solid 2px #005F9F !important;
 }
 
+
+.btn-cerrar{
+    background-color: #EBBE17 !important;
+    color: black !important;
+}
+
+.btn-cerrar:hover{
+    background-color: #EBBE17 !important;
+    color: black !important;
+    border: solid 2px #005F9F !important;
+}
+
+.btn-enviar{
+    background-color: #EB5717 !important;
+    color: white !important;
+}
+
+
+
 .btn-editar{
     background-color: #4C4A48 !important;
     color: white !important;
@@ -115,4 +138,25 @@ nav{
 canvas{
     width: 100% !important;
     height: 100% !important;
+}
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 5em;
+    height: 5em;
+    animation: spin 2s linear infinite;
+    display: block !important;
+   
+   
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  .logopers{
+    color: #80FF00;
 }
